fixed content alignment.

--- a/djangovoice/static/djangovoice/css/djangovoice.css
+++ b/djangovoice/static/djangovoice/css/djangovoice.css
@@ -43,12 +43,19 @@ html, body {
 #content {
     padding-top: 20px;
     background-color: #fff;
-    -moz-border-radius: 6px;
-    -webkit-border-radius: 6px;
+    border-top-right-radius: 6px;
+    border-bottom-right-radius: 6px;
+    border-bottom-left-radius: 6px;
+    -moz-border-radius-topright: 6px;
+    -moz-border-radius-bottomright: 6px;
+    -moz-border-radius-bottomleft: 6px;
+    -webkit-border-top-right-radius: 6px;
+    -webkit-border-bottom-right-radius: 6px;
+    -webkit-border-bottom-left-radius: 6px;
 }
 
 #sidebar {
-    margin-right: 20px;
+    padding-right: 10px;
 }
 
 #sidebar h4 {
@@ -94,6 +101,10 @@ html, body {
 
 
 /**** index ****/
+#feedback {
+    padding-left: 10px;
+}
+
 #feedback h2 {
     margin: 20px 0 0 0;
 }
